<resources>
    <string name="app_name">Cinema</string>
    <string name="poster_avengers_end_game">This is a poster of the Avengers: End Game</string>
    <string name="back">Back</string>
    <string name="age_13">13+</string>
    <string name="avengers_end_game">Avengers:\nEnd Game</string>
    <string name="avengers_end_game_preview" translatable="false">Avengers: End Game</string>
    <string name="genre">Action, Adventure, Fantasy</string>
    <string name="star1">star one</string>
    <string name="star_two">two stars</string>
    <string name="star_three">three stars</string>
    <string name="star_four">four stars</string>
    <string name="star_five">five stars</string>
    <string name="reviews">125 REVIEWS</string>
    <string name="storyline">Storyline</string>
    <string name="description_avengers_end">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="robert_downey_jr">Robert\nDowney Jr.</string>
    <string name="actor_robert_downey_jr">Actor Robert Downey Jr.</string>
    <string name="actor_chris_evans">Actor Chris Evans</string>
    <string name="chris_evans">Chris\nEvans</string>
    <string name="actor_mark_ruffalo">Actor Mark Ruffalo</string>
    <string name="mark_ruffalo">Mark\nRuffalo</string>
    <string name="chris_hemsworth">Chris\nHemsworth</string>
    <string name="actor_chris_hemsworth">Actor Chris Hemsworth</string>
    <string name="movies_list" translatable="false">Movies list</string>
    <string name="duration_film" translatable="false">137 MIN</string>
</resources>
