<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/poster_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/poster"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/poster_avengers_end_game"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/mask" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineVertical1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHorizontal1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="56dp" />

        <TextView
            android:id="@+id/tvBack"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/back"
            android:textColor="@color/color_grey_back"
            android:textSize="12sp"
            android:drawablePadding="8dp"
            app:drawableStartCompat="@drawable/path"
            app:layout_constraintStart_toStartOf="@id/guidelineVertical1"
            app:layout_constraintTop_toBottomOf="@id/guidelineHorizontal1"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHorizontal2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="226dp" />

        <TextView
            android:id="@+id/tvAgeLimit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age_13"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/guidelineVertical1"
            app:layout_constraintTop_toBottomOf="@id/guidelineHorizontal2"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHorizontal3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="254dp" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avengers_end_game"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="@id/guidelineVertical1"
            app:layout_constraintTop_toBottomOf="@+id/tvAgeLimit"/>

        <TextView
            android:id="@+id/tvGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/genre"
            android:textColor="@color/red_color_genre"
            app:layout_constraintStart_toStartOf="@id/guidelineVertical1"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:src="@drawable/star_icon_fill"
            android:contentDescription="@string/star1"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/guidelineVertical1"
            app:layout_constraintTop_toBottomOf="@id/tvGenre" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="3.25dp"
            android:src="@drawable/star_icon_fill"
            android:contentDescription="@string/star_two"
            app:layout_constraintEnd_toStartOf="@+id/imageView3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView1"
            app:layout_constraintTop_toBottomOf="@id/tvGenre" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="3.25dp"
            android:src="@drawable/star_icon_fill"
            android:contentDescription="@string/star_three"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@id/tvGenre" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="3.25dp"
            android:src="@drawable/star_icon_fill"
            android:contentDescription="@string/star_four"
            app:layout_constraintEnd_toStartOf="@+id/imageView5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@id/tvGenre" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3.25dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/star_icon_no_fill"
            android:contentDescription="@string/star_five"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@id/tvGenre" />


        <TextView
            android:id="@+id/tvReviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="87dp"
            android:layout_marginTop="4dp"
            android:text="@string/reviews"
            android:textColor="@color/color_grey_back"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/guidelineVertical1"
            app:layout_constraintTop_toBottomOf="@+id/tvGenre" />

        <TextView
            android:id="@+id/tvStoryline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/storyline"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="28dp"
            app:layout_constraintStart_toStartOf="@id/guidelineVertical1"
            app:layout_constraintTop_toBottomOf="@+id/imageView1"/>

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:lineSpacingExtra="4sp"
            android:text="@string/description_avengers_end"
            android:textColor="@color/color_main_description"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/guidelineVertical2"
            app:layout_constraintStart_toStartOf="@id/guidelineVertical1"
            app:layout_constraintTop_toBottomOf="@+id/tvStoryline" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineVertical2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <TextView
            android:id="@+id/tvCast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cast"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="@id/guidelineVertical1"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_actors"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="@id/guidelineVertical1"
            app:layout_constraintTop_toBottomOf="@+id/tvCast"
            tools:listitem="@layout/view_holder_actor">
        </androidx.recyclerview.widget.RecyclerView>



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>