<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_movie"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/poster_background"
    app:layout_constraintStart_toStartOf="@id/guidelineVertical1"
    app:layout_constraintTop_toBottomOf="@id/guidelineHorizontal2"
    app:layout_constraintEnd_toEndOf="@id/guidelineVertical2"
    app:cardCornerRadius="8dp"
    app:strokeColor="#3B3B4D"
    app:cardUseCompatPadding="true"
    app:strokeWidth="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

         <ImageView
            android:id="@+id/ivPosterCard1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/poster_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/avengers_mini_poster"
            android:contentDescription="@string/avengers_end_game">
        </ImageView>

        <ImageView
            android:id="@+id/ivAgeBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="6dp"
            android:background="@drawable/rectangle_age"
            app:layout_constraintTop_toTopOf="@id/ivPosterCard1"
            app:layout_constraintStart_toStartOf="@id/ivPosterCard1"
            tools:ignore="ContentDescription">
        </ImageView>

        <TextView
            android:id="@+id/tvAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/age_13"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/ivAgeBox"
            app:layout_constraintEnd_toEndOf="@+id/ivAgeBox"
            app:layout_constraintStart_toStartOf="@id/ivAgeBox"
            app:layout_constraintTop_toTopOf="@id/ivAgeBox" />

        <ImageView
            android:id="@+id/ivLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:srcCompat="@drawable/like_icon_white"
            app:layout_constraintTop_toTopOf="@id/ivPosterCard1"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="6dp"
            app:layout_constraintRight_toRightOf="@id/ivPosterCard1"
            tools:ignore="ContentDescription">
        </ImageView>

        <TextView
            android:id="@+id/tvGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="8sp"
            android:layout_marginTop="214dp"
            android:layout_marginStart="6dp"
            android:textColor="@color/red_color_genre"
            app:layout_constraintTop_toTopOf="@id/ivPosterCard1"
            app:layout_constraintLeft_toLeftOf="@id/ivPosterCard1"
            tools:text="@string/genre"
            tools:ignore="SmallSp" />

        <ImageView
            android:id="@+id/ivStar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/star_icon_mini"
            app:layout_constraintTop_toBottomOf="@id/tvGenre"
            android:layout_marginTop="4dp"
            android:layout_marginStart="6dp"
            app:layout_constraintLeft_toLeftOf="@id/ivPosterCard1"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/ivStar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/star_icon_mini"
            app:layout_constraintTop_toBottomOf="@id/tvGenre"
            android:layout_marginTop="4dp"
            android:layout_marginStart="2dp"
            app:layout_constraintLeft_toRightOf="@id/ivStar1"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/ivStar3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/star_icon_mini"
            app:layout_constraintTop_toBottomOf="@id/tvGenre"
            android:layout_marginTop="4dp"
            android:layout_marginStart="2dp"
            app:layout_constraintLeft_toRightOf="@id/ivStar2"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/ivStar4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/star_icon_mini"
            app:layout_constraintTop_toBottomOf="@id/tvGenre"
            android:layout_marginTop="4dp"
            android:layout_marginStart="2dp"
            app:layout_constraintLeft_toRightOf="@id/ivStar3"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/ivStar5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/star_icon_mini_grey"
            app:layout_constraintTop_toBottomOf="@id/tvGenre"
            android:layout_marginTop="4dp"
            android:layout_marginStart="2dp"
            app:layout_constraintLeft_toRightOf="@id/ivStar4"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvReview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reviews"
            android:textColor="@color/color_grey_new"
            app:layout_constraintTop_toBottomOf="@id/tvGenre"
            android:textSize="8sp"
            android:textStyle="bold"
            android:layout_marginTop="2.5dp"
            android:layout_marginStart="6dp"
            app:layout_constraintLeft_toRightOf="@id/ivStar5"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/tvTitleCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/avengers_end_game"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_marginStart="6dp"
            app:layout_constraintTop_toBottomOf="@id/ivPosterCard1"
            app:layout_constraintStart_toStartOf="@id/ivPosterCard1"
            />

        <TextView
            android:id="@+id/tvTimeDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginBottom="8dp"
            android:lineSpacingExtra="3sp"
            tools:text="@string/duration_film"
            android:textColor="@color/color_grey_light"
            android:textSize="8sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/ivPosterCard1"
            app:layout_constraintTop_toBottomOf="@id/tvTitleCard"
            tools:ignore="SmallSp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>